// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: affordability > halifax 1`] = `
{
  "approvalPass": false,
  "binding": 4550,
  "budget": 2903.3333333333335,
  "capacityPer100": 0,
  "capacityPerDollar": 141.97524010176792,
  "cashGap": -36644.375,
  "cc": {
    "cash": 81644.375,
    "creditsAtClosing": 0,
    "fin": {
      "baseLoan": 585000,
      "down": 65000,
      "insured": true,
      "loan": 603135,
      "minDown": 40000,
      "premRate": 0.031,
      "premium": 18135,
    },
    "later": 1400,
    "net": 81644.375,
    "total": 16644.375,
  },
  "ceiling": 624691.056447779,
  "comfort": 426517.1254919062,
  "comfortDown": 42651.71254919061,
  "comfortGap": 1521.2643061874232,
  "comfortPI": 2144.48828089565,
  "comfortPass": false,
  "debtCapacity": 0,
  "fc": 0.005418586727991948,
  "fq": 0.006571449862978475,
  "gap": 198173.93095587275,
  "gdsAllow": 4550,
  "gdsAtTarget": 40.52796925520734,
  "gross": 140000,
  "impliedMortgage": 579650.8312778941,
  "monthly": {
    "condoFee": 0,
    "insurance": 116.66666666666667,
    "maintenance": 541.6666666666666,
    "pi": 3268.1393061874237,
    "propTax": 614.7916666666667,
    "total": 4721.264306187423,
    "utilities": 180,
  },
  "monthsToClose": 46,
  "qualIncome": 140000,
  "qualRate": 6.29,
  "tdsAllow": 4783.333333333333,
  "tdsAtTarget": 43.52796925520734,
  "tdsBinds": false,
}
`;

exports[`golden: affordability > toronto 1`] = `
{
  "approvalPass": true,
  "binding": 4550,
  "budget": 2903.3333333333335,
  "capacityPer100": 0,
  "capacityPerDollar": 153.3886820637214,
  "cashGap": -38548.188125,
  "cc": {
    "cash": 92023.188125,
    "creditsAtClosing": 8475,
    "fin": {
      "baseLoan": 585000,
      "down": 65000,
      "insured": true,
      "loan": 603135,
      "minDown": 40000,
      "premRate": 0.031,
      "premium": 18135,
    },
    "later": 1400,
    "net": 83548.188125,
    "total": 27023.188125,
  },
  "ceiling": 674910.2010803742,
  "comfort": 462095.13763685833,
  "comfortDown": 46209.513763685834,
  "comfortGap": 1180.6020145207567,
  "comfortPI": 2323.37120386016,
  "comfortPass": false,
  "debtCapacity": 0,
  "fc": 0.005418586727991948,
  "fq": 0.006571449862978475,
  "gap": 212815.06344351586,
  "gdsAllow": 4550,
  "gdsAtTarget": 37.60800675520734,
  "gross": 140000,
  "impliedMortgage": 626249.1755824792,
  "monthly": {
    "condoFee": 0,
    "insurance": 116.66666666666667,
    "maintenance": 541.6666666666666,
    "pi": 3268.1393061874237,
    "propTax": 274.12937500000004,
    "total": 4380.602014520757,
    "utilities": 180,
  },
  "monthsToClose": 49,
  "qualIncome": 140000,
  "qualRate": 6.29,
  "tdsAllow": 4783.333333333333,
  "tdsAtTarget": 40.60800675520734,
  "tdsBinds": false,
}
`;

exports[`golden: affordability > winnipeg 1`] = `
{
  "approvalPass": false,
  "binding": 4550,
  "budget": 2903.3333333333335,
  "capacityPer100": 0,
  "capacityPerDollar": 138.91062593507039,
  "cashGap": -40721.38875,
  "cc": {
    "cash": 85721.38875,
    "creditsAtClosing": 0,
    "fin": {
      "baseLoan": 585000,
      "down": 65000,
      "insured": true,
      "loan": 603135,
      "minDown": 40000,
      "premRate": 0.031,
      "premium": 18135,
    },
    "later": 1400,
    "net": 85721.38875,
    "total": 20721.38875,
  },
  "ceiling": 611206.7541143097,
  "comfort": 416997.90961224097,
  "comfortDown": 41699.7909612241,
  "comfortGap": 1622.2688895207575,
  "comfortPI": 2096.6265523103925,
  "comfortPass": false,
  "debtCapacity": 0,
  "fc": 0.005418586727991948,
  "fq": 0.006571449862978475,
  "gap": 194208.8445020687,
  "gdsAllow": 4550,
  "gdsAtTarget": 41.393722826635916,
  "gross": 140000,
  "impliedMortgage": 567138.7471426679,
  "monthly": {
    "condoFee": 0,
    "insurance": 116.66666666666667,
    "maintenance": 541.6666666666666,
    "pi": 3268.1393061874237,
    "propTax": 715.79625,
    "total": 4822.2688895207575,
    "utilities": 180,
  },
  "monthsToClose": 51,
  "qualIncome": 140000,
  "qualRate": 6.29,
  "tdsAllow": 4783.333333333333,
  "tdsAtTarget": 44.39372282663591,
  "tdsBinds": false,
}
`;

exports[`golden: amortization > halifax 1`] = `
{
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "firstPayment": 3268.1393061874237,
  "paymentAfterRenewal": 3684.3422985883876,
  "payoffYear": 25,
  "peakPayment": 3684.3422985883876,
  "rows": [
    {
      "closing": 589295.9090339254,
      "interest": 25378.580708174417,
      "opening": 603135,
      "payment": 3268.1393061874237,
      "principal": 13839.090966074666,
      "rate": 4.29,
      "renewed": false,
      "t": 1,
    },
    {
      "closing": 574856.7536650548,
      "interest": 24778.516305378605,
      "opening": 589295.9090339254,
      "payment": 3268.1393061874237,
      "principal": 14439.155368870479,
      "rate": 4.29,
      "renewed": false,
      "t": 2,
    },
    {
      "closing": 559791.5150393767,
      "interest": 24152.43304857097,
      "opening": 574856.7536650548,
      "payment": 3268.1393061874237,
      "principal": 15065.238625678117,
      "rate": 4.29,
      "renewed": false,
      "t": 3,
    },
    {
      "closing": 544073.0461227022,
      "interest": 23499.202757574625,
      "opening": 559791.5150393767,
      "payment": 3268.1393061874237,
      "principal": 15718.468916674461,
      "rate": 4.29,
      "renewed": false,
      "t": 4,
    },
    {
      "closing": 527673.0227826575,
      "interest": 22817.648334204565,
      "opening": 544073.0461227022,
      "payment": 3268.1393061874237,
      "principal": 16400.02334004452,
      "rate": 4.29,
      "renewed": false,
      "t": 5,
    },
    {
      "closing": 513068.4430465112,
      "interest": 29607.52784691439,
      "opening": 527673.0227826575,
      "payment": 3684.3422985883876,
      "principal": 14604.579736146265,
      "rate": 5.75,
      "renewed": true,
      "t": 6,
    },
    {
      "closing": 497612.0283775982,
      "interest": 28755.69291414783,
      "opening": 513068.4430465112,
      "payment": 3684.3422985883876,
      "principal": 15456.414668912828,
      "rate": 5.75,
      "renewed": false,
      "t": 7,
    },
    {
      "closing": 481254.09417247324,
      "interest": 27854.173377935567,
      "opening": 497612.0283775982,
      "payment": 3684.3422985883876,
      "principal": 16357.934205125082,
      "rate": 5.75,
      "renewed": false,
      "t": 8,
    },
    {
      "closing": 463942.05789556215,
      "interest": 26900.071306149475,
      "opening": 481254.09417247324,
      "payment": 3684.3422985883876,
      "principal": 17312.036276911178,
      "rate": 5.75,
      "renewed": false,
      "t": 9,
    },
    {
      "closing": 445620.27005274344,
      "interest": 25890.319740241954,
      "opening": 463942.05789556215,
      "payment": 3684.3422985883876,
      "principal": 18321.787842818692,
      "rate": 5.75,
      "renewed": false,
      "t": 10,
    },
    {
      "closing": 426229.83530619886,
      "interest": 24821.672836516067,
      "opening": 445620.27005274344,
      "payment": 3684.342298588387,
      "principal": 19390.43474654458,
      "rate": 5.75,
      "renewed": true,
      "t": 11,
    },
    {
      "closing": 405708.42315550783,
      "interest": 23690.695432369575,
      "opening": 426229.83530619886,
      "payment": 3684.342298588387,
      "principal": 20521.412150691067,
      "rate": 5.75,
      "renewed": false,
      "t": 12,
    },
    {
      "closing": 383990.06757642113,
      "interest": 22493.752003974056,
      "opening": 405708.42315550783,
      "payment": 3684.342298588387,
      "principal": 21718.355579086594,
      "rate": 5.75,
      "renewed": false,
      "t": 13,
    },
    {
      "closing": 361004.9549732537,
      "interest": 21226.994979893236,
      "opening": 383990.06757642113,
      "payment": 3684.342298588387,
      "principal": 22985.112603167396,
      "rate": 5.75,
      "renewed": false,
      "t": 14,
    },
    {
      "closing": 336679.1997632681,
      "interest": 19886.352373075082,
      "opening": 361004.9549732537,
      "payment": 3684.342298588387,
      "principal": 24325.755209985564,
      "rate": 5.75,
      "renewed": false,
      "t": 15,
    },
    {
      "closing": 310934.60687166767,
      "interest": 18467.514691460176,
      "opening": 336679.1997632681,
      "payment": 3684.3422985883867,
      "principal": 25744.59289160046,
      "rate": 5.75,
      "renewed": true,
      "t": 16,
    },
    {
      "closing": 283688.4203737382,
      "interest": 16965.9210851312,
      "opening": 310934.60687166767,
      "payment": 3684.3422985883867,
      "principal": 27246.186497929437,
      "rate": 5.75,
      "renewed": false,
      "t": 17,
    },
    {
      "closing": 254853.0574761506,
      "interest": 15376.744685473082,
      "opening": 283688.4203737382,
      "payment": 3684.3422985883867,
      "principal": 28835.362897587554,
      "rate": 5.75,
      "renewed": false,
      "t": 18,
    },
    {
      "closing": 224335.82698230672,
      "interest": 13694.877089216781,
      "opening": 254853.0574761506,
      "payment": 3684.3422985883867,
      "principal": 30517.23049384386,
      "rate": 5.75,
      "renewed": false,
      "t": 19,
    },
    {
      "closing": 192038.63133673678,
      "interest": 11914.911937490711,
      "opening": 224335.82698230672,
      "payment": 3684.3422985883867,
      "principal": 32297.19564556993,
      "rate": 5.75,
      "renewed": false,
      "t": 20,
    },
    {
      "closing": 157857.6512907708,
      "interest": 10031.127537094673,
      "opening": 192038.63133673678,
      "payment": 3684.342298588386,
      "principal": 34180.98004596595,
      "rate": 5.75,
      "renewed": true,
      "t": 21,
    },
    {
      "closing": 121683.01217584255,
      "interest": 8037.468468132409,
      "opening": 157857.6512907708,
      "payment": 3684.342298588386,
      "principal": 36174.63911492821,
      "rate": 5.75,
      "renewed": false,
      "t": 22,
    },
    {
      "closing": 83398.43071166256,
      "interest": 5927.526118880629,
      "opening": 121683.01217584255,
      "payment": 3684.342298588386,
      "principal": 38284.58146418,
      "rate": 5.75,
      "renewed": false,
      "t": 23,
    },
    {
      "closing": 42880.84121392574,
      "interest": 3694.5180853238203,
      "opening": 83398.43071166256,
      "payment": 3684.342298588386,
      "principal": 40517.58949773681,
      "rate": 5.75,
      "renewed": false,
      "t": 24,
    },
    {
      "closing": 0,
      "interest": 1331.2663691347602,
      "opening": 42880.84121392574,
      "payment": 3684.342298588386,
      "principal": 42880.841213925734,
      "rate": 5.75,
      "renewed": false,
      "t": 25,
    },
  ],
  "shock": 416.2029924009639,
  "term": 5,
  "totalInterest": 477195.51003245864,
  "totalPaid": 1080330.5100324578,
}
`;

exports[`golden: amortization > toronto 1`] = `
{
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "firstPayment": 3268.1393061874237,
  "paymentAfterRenewal": 3684.3422985883876,
  "payoffYear": 25,
  "peakPayment": 3684.3422985883876,
  "rows": [
    {
      "closing": 589295.9090339254,
      "interest": 25378.580708174417,
      "opening": 603135,
      "payment": 3268.1393061874237,
      "principal": 13839.090966074666,
      "rate": 4.29,
      "renewed": false,
      "t": 1,
    },
    {
      "closing": 574856.7536650548,
      "interest": 24778.516305378605,
      "opening": 589295.9090339254,
      "payment": 3268.1393061874237,
      "principal": 14439.155368870479,
      "rate": 4.29,
      "renewed": false,
      "t": 2,
    },
    {
      "closing": 559791.5150393767,
      "interest": 24152.43304857097,
      "opening": 574856.7536650548,
      "payment": 3268.1393061874237,
      "principal": 15065.238625678117,
      "rate": 4.29,
      "renewed": false,
      "t": 3,
    },
    {
      "closing": 544073.0461227022,
      "interest": 23499.202757574625,
      "opening": 559791.5150393767,
      "payment": 3268.1393061874237,
      "principal": 15718.468916674461,
      "rate": 4.29,
      "renewed": false,
      "t": 4,
    },
    {
      "closing": 527673.0227826575,
      "interest": 22817.648334204565,
      "opening": 544073.0461227022,
      "payment": 3268.1393061874237,
      "principal": 16400.02334004452,
      "rate": 4.29,
      "renewed": false,
      "t": 5,
    },
    {
      "closing": 513068.4430465112,
      "interest": 29607.52784691439,
      "opening": 527673.0227826575,
      "payment": 3684.3422985883876,
      "principal": 14604.579736146265,
      "rate": 5.75,
      "renewed": true,
      "t": 6,
    },
    {
      "closing": 497612.0283775982,
      "interest": 28755.69291414783,
      "opening": 513068.4430465112,
      "payment": 3684.3422985883876,
      "principal": 15456.414668912828,
      "rate": 5.75,
      "renewed": false,
      "t": 7,
    },
    {
      "closing": 481254.09417247324,
      "interest": 27854.173377935567,
      "opening": 497612.0283775982,
      "payment": 3684.3422985883876,
      "principal": 16357.934205125082,
      "rate": 5.75,
      "renewed": false,
      "t": 8,
    },
    {
      "closing": 463942.05789556215,
      "interest": 26900.071306149475,
      "opening": 481254.09417247324,
      "payment": 3684.3422985883876,
      "principal": 17312.036276911178,
      "rate": 5.75,
      "renewed": false,
      "t": 9,
    },
    {
      "closing": 445620.27005274344,
      "interest": 25890.319740241954,
      "opening": 463942.05789556215,
      "payment": 3684.3422985883876,
      "principal": 18321.787842818692,
      "rate": 5.75,
      "renewed": false,
      "t": 10,
    },
    {
      "closing": 426229.83530619886,
      "interest": 24821.672836516067,
      "opening": 445620.27005274344,
      "payment": 3684.342298588387,
      "principal": 19390.43474654458,
      "rate": 5.75,
      "renewed": true,
      "t": 11,
    },
    {
      "closing": 405708.42315550783,
      "interest": 23690.695432369575,
      "opening": 426229.83530619886,
      "payment": 3684.342298588387,
      "principal": 20521.412150691067,
      "rate": 5.75,
      "renewed": false,
      "t": 12,
    },
    {
      "closing": 383990.06757642113,
      "interest": 22493.752003974056,
      "opening": 405708.42315550783,
      "payment": 3684.342298588387,
      "principal": 21718.355579086594,
      "rate": 5.75,
      "renewed": false,
      "t": 13,
    },
    {
      "closing": 361004.9549732537,
      "interest": 21226.994979893236,
      "opening": 383990.06757642113,
      "payment": 3684.342298588387,
      "principal": 22985.112603167396,
      "rate": 5.75,
      "renewed": false,
      "t": 14,
    },
    {
      "closing": 336679.1997632681,
      "interest": 19886.352373075082,
      "opening": 361004.9549732537,
      "payment": 3684.342298588387,
      "principal": 24325.755209985564,
      "rate": 5.75,
      "renewed": false,
      "t": 15,
    },
    {
      "closing": 310934.60687166767,
      "interest": 18467.514691460176,
      "opening": 336679.1997632681,
      "payment": 3684.3422985883867,
      "principal": 25744.59289160046,
      "rate": 5.75,
      "renewed": true,
      "t": 16,
    },
    {
      "closing": 283688.4203737382,
      "interest": 16965.9210851312,
      "opening": 310934.60687166767,
      "payment": 3684.3422985883867,
      "principal": 27246.186497929437,
      "rate": 5.75,
      "renewed": false,
      "t": 17,
    },
    {
      "closing": 254853.0574761506,
      "interest": 15376.744685473082,
      "opening": 283688.4203737382,
      "payment": 3684.3422985883867,
      "principal": 28835.362897587554,
      "rate": 5.75,
      "renewed": false,
      "t": 18,
    },
    {
      "closing": 224335.82698230672,
      "interest": 13694.877089216781,
      "opening": 254853.0574761506,
      "payment": 3684.3422985883867,
      "principal": 30517.23049384386,
      "rate": 5.75,
      "renewed": false,
      "t": 19,
    },
    {
      "closing": 192038.63133673678,
      "interest": 11914.911937490711,
      "opening": 224335.82698230672,
      "payment": 3684.3422985883867,
      "principal": 32297.19564556993,
      "rate": 5.75,
      "renewed": false,
      "t": 20,
    },
    {
      "closing": 157857.6512907708,
      "interest": 10031.127537094673,
      "opening": 192038.63133673678,
      "payment": 3684.342298588386,
      "principal": 34180.98004596595,
      "rate": 5.75,
      "renewed": true,
      "t": 21,
    },
    {
      "closing": 121683.01217584255,
      "interest": 8037.468468132409,
      "opening": 157857.6512907708,
      "payment": 3684.342298588386,
      "principal": 36174.63911492821,
      "rate": 5.75,
      "renewed": false,
      "t": 22,
    },
    {
      "closing": 83398.43071166256,
      "interest": 5927.526118880629,
      "opening": 121683.01217584255,
      "payment": 3684.342298588386,
      "principal": 38284.58146418,
      "rate": 5.75,
      "renewed": false,
      "t": 23,
    },
    {
      "closing": 42880.84121392574,
      "interest": 3694.5180853238203,
      "opening": 83398.43071166256,
      "payment": 3684.342298588386,
      "principal": 40517.58949773681,
      "rate": 5.75,
      "renewed": false,
      "t": 24,
    },
    {
      "closing": 0,
      "interest": 1331.2663691347602,
      "opening": 42880.84121392574,
      "payment": 3684.342298588386,
      "principal": 42880.841213925734,
      "rate": 5.75,
      "renewed": false,
      "t": 25,
    },
  ],
  "shock": 416.2029924009639,
  "term": 5,
  "totalInterest": 477195.51003245864,
  "totalPaid": 1080330.5100324578,
}
`;

exports[`golden: amortization > winnipeg 1`] = `
{
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "firstPayment": 3268.1393061874237,
  "paymentAfterRenewal": 3684.3422985883876,
  "payoffYear": 25,
  "peakPayment": 3684.3422985883876,
  "rows": [
    {
      "closing": 589295.9090339254,
      "interest": 25378.580708174417,
      "opening": 603135,
      "payment": 3268.1393061874237,
      "principal": 13839.090966074666,
      "rate": 4.29,
      "renewed": false,
      "t": 1,
    },
    {
      "closing": 574856.7536650548,
      "interest": 24778.516305378605,
      "opening": 589295.9090339254,
      "payment": 3268.1393061874237,
      "principal": 14439.155368870479,
      "rate": 4.29,
      "renewed": false,
      "t": 2,
    },
    {
      "closing": 559791.5150393767,
      "interest": 24152.43304857097,
      "opening": 574856.7536650548,
      "payment": 3268.1393061874237,
      "principal": 15065.238625678117,
      "rate": 4.29,
      "renewed": false,
      "t": 3,
    },
    {
      "closing": 544073.0461227022,
      "interest": 23499.202757574625,
      "opening": 559791.5150393767,
      "payment": 3268.1393061874237,
      "principal": 15718.468916674461,
      "rate": 4.29,
      "renewed": false,
      "t": 4,
    },
    {
      "closing": 527673.0227826575,
      "interest": 22817.648334204565,
      "opening": 544073.0461227022,
      "payment": 3268.1393061874237,
      "principal": 16400.02334004452,
      "rate": 4.29,
      "renewed": false,
      "t": 5,
    },
    {
      "closing": 513068.4430465112,
      "interest": 29607.52784691439,
      "opening": 527673.0227826575,
      "payment": 3684.3422985883876,
      "principal": 14604.579736146265,
      "rate": 5.75,
      "renewed": true,
      "t": 6,
    },
    {
      "closing": 497612.0283775982,
      "interest": 28755.69291414783,
      "opening": 513068.4430465112,
      "payment": 3684.3422985883876,
      "principal": 15456.414668912828,
      "rate": 5.75,
      "renewed": false,
      "t": 7,
    },
    {
      "closing": 481254.09417247324,
      "interest": 27854.173377935567,
      "opening": 497612.0283775982,
      "payment": 3684.3422985883876,
      "principal": 16357.934205125082,
      "rate": 5.75,
      "renewed": false,
      "t": 8,
    },
    {
      "closing": 463942.05789556215,
      "interest": 26900.071306149475,
      "opening": 481254.09417247324,
      "payment": 3684.3422985883876,
      "principal": 17312.036276911178,
      "rate": 5.75,
      "renewed": false,
      "t": 9,
    },
    {
      "closing": 445620.27005274344,
      "interest": 25890.319740241954,
      "opening": 463942.05789556215,
      "payment": 3684.3422985883876,
      "principal": 18321.787842818692,
      "rate": 5.75,
      "renewed": false,
      "t": 10,
    },
    {
      "closing": 426229.83530619886,
      "interest": 24821.672836516067,
      "opening": 445620.27005274344,
      "payment": 3684.342298588387,
      "principal": 19390.43474654458,
      "rate": 5.75,
      "renewed": true,
      "t": 11,
    },
    {
      "closing": 405708.42315550783,
      "interest": 23690.695432369575,
      "opening": 426229.83530619886,
      "payment": 3684.342298588387,
      "principal": 20521.412150691067,
      "rate": 5.75,
      "renewed": false,
      "t": 12,
    },
    {
      "closing": 383990.06757642113,
      "interest": 22493.752003974056,
      "opening": 405708.42315550783,
      "payment": 3684.342298588387,
      "principal": 21718.355579086594,
      "rate": 5.75,
      "renewed": false,
      "t": 13,
    },
    {
      "closing": 361004.9549732537,
      "interest": 21226.994979893236,
      "opening": 383990.06757642113,
      "payment": 3684.342298588387,
      "principal": 22985.112603167396,
      "rate": 5.75,
      "renewed": false,
      "t": 14,
    },
    {
      "closing": 336679.1997632681,
      "interest": 19886.352373075082,
      "opening": 361004.9549732537,
      "payment": 3684.342298588387,
      "principal": 24325.755209985564,
      "rate": 5.75,
      "renewed": false,
      "t": 15,
    },
    {
      "closing": 310934.60687166767,
      "interest": 18467.514691460176,
      "opening": 336679.1997632681,
      "payment": 3684.3422985883867,
      "principal": 25744.59289160046,
      "rate": 5.75,
      "renewed": true,
      "t": 16,
    },
    {
      "closing": 283688.4203737382,
      "interest": 16965.9210851312,
      "opening": 310934.60687166767,
      "payment": 3684.3422985883867,
      "principal": 27246.186497929437,
      "rate": 5.75,
      "renewed": false,
      "t": 17,
    },
    {
      "closing": 254853.0574761506,
      "interest": 15376.744685473082,
      "opening": 283688.4203737382,
      "payment": 3684.3422985883867,
      "principal": 28835.362897587554,
      "rate": 5.75,
      "renewed": false,
      "t": 18,
    },
    {
      "closing": 224335.82698230672,
      "interest": 13694.877089216781,
      "opening": 254853.0574761506,
      "payment": 3684.3422985883867,
      "principal": 30517.23049384386,
      "rate": 5.75,
      "renewed": false,
      "t": 19,
    },
    {
      "closing": 192038.63133673678,
      "interest": 11914.911937490711,
      "opening": 224335.82698230672,
      "payment": 3684.3422985883867,
      "principal": 32297.19564556993,
      "rate": 5.75,
      "renewed": false,
      "t": 20,
    },
    {
      "closing": 157857.6512907708,
      "interest": 10031.127537094673,
      "opening": 192038.63133673678,
      "payment": 3684.342298588386,
      "principal": 34180.98004596595,
      "rate": 5.75,
      "renewed": true,
      "t": 21,
    },
    {
      "closing": 121683.01217584255,
      "interest": 8037.468468132409,
      "opening": 157857.6512907708,
      "payment": 3684.342298588386,
      "principal": 36174.63911492821,
      "rate": 5.75,
      "renewed": false,
      "t": 22,
    },
    {
      "closing": 83398.43071166256,
      "interest": 5927.526118880629,
      "opening": 121683.01217584255,
      "payment": 3684.342298588386,
      "principal": 38284.58146418,
      "rate": 5.75,
      "renewed": false,
      "t": 23,
    },
    {
      "closing": 42880.84121392574,
      "interest": 3694.5180853238203,
      "opening": 83398.43071166256,
      "payment": 3684.342298588386,
      "principal": 40517.58949773681,
      "rate": 5.75,
      "renewed": false,
      "t": 24,
    },
    {
      "closing": 0,
      "interest": 1331.2663691347602,
      "opening": 42880.84121392574,
      "payment": 3684.342298588386,
      "principal": 42880.841213925734,
      "rate": 5.75,
      "renewed": false,
      "t": 25,
    },
  ],
  "shock": 416.2029924009639,
  "term": 5,
  "totalInterest": 477195.51003245864,
  "totalPaid": 1080330.5100324578,
}
`;

exports[`golden: closingTotal > halifax 1`] = `
{
  "cash": 146644.375,
  "creditsAtClosing": 0,
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "later": 0,
  "net": 146644.375,
  "total": 81644.375,
}
`;

exports[`golden: closingTotal > toronto 1`] = `
{
  "cash": 92123.188125,
  "creditsAtClosing": 8475,
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "later": 1400,
  "net": 83648.188125,
  "total": 27123.188125,
}
`;

exports[`golden: closingTotal > winnipeg 1`] = `
{
  "cash": 85721.38875,
  "creditsAtClosing": 0,
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "later": 1400,
  "net": 85721.38875,
  "total": 20721.38875,
}
`;

exports[`golden: hbpPlay > halifax 1`] = `
{
  "clampedByContribution": false,
  "contribution": 40000,
  "graceYears": 2,
  "marginalRate": 0.43,
  "max": 60000,
  "refund": 14961.125,
  "repayAnnual": 2333.3333333333335,
  "repayYears": 15,
  "ruleDays": 90,
  "schedule": [
    {
      "balance": 32666.666666666668,
      "repay": 2333.3333333333335,
      "year": 1,
    },
    {
      "balance": 30333.333333333336,
      "repay": 2333.3333333333335,
      "year": 2,
    },
    {
      "balance": 28000.000000000004,
      "repay": 2333.3333333333335,
      "year": 3,
    },
    {
      "balance": 25666.66666666667,
      "repay": 2333.3333333333335,
      "year": 4,
    },
    {
      "balance": 23333.33333333334,
      "repay": 2333.3333333333335,
      "year": 5,
    },
    {
      "balance": 21000.000000000007,
      "repay": 2333.3333333333335,
      "year": 6,
    },
    {
      "balance": 18666.666666666675,
      "repay": 2333.3333333333335,
      "year": 7,
    },
    {
      "balance": 16333.333333333341,
      "repay": 2333.3333333333335,
      "year": 8,
    },
    {
      "balance": 14000.000000000007,
      "repay": 2333.3333333333335,
      "year": 9,
    },
    {
      "balance": 11666.666666666673,
      "repay": 2333.3333333333335,
      "year": 10,
    },
    {
      "balance": 9333.33333333334,
      "repay": 2333.3333333333335,
      "year": 11,
    },
    {
      "balance": 7000.0000000000055,
      "repay": 2333.3333333333335,
      "year": 12,
    },
    {
      "balance": 4666.6666666666715,
      "repay": 2333.3333333333335,
      "year": 13,
    },
    {
      "balance": 2333.333333333338,
      "repay": 2333.3333333333335,
      "year": 14,
    },
    {
      "balance": 4.547473508864641e-12,
      "repay": 2333.3333333333335,
      "year": 15,
    },
  ],
  "taxIfMissed": 1003.3333333333334,
  "withdraw": 35000,
  "withdrawRequested": 35000,
  "withdrawRoomLeft": 25000,
}
`;

exports[`golden: hbpPlay > toronto 1`] = `
{
  "clampedByContribution": false,
  "contribution": 40000,
  "graceYears": 2,
  "marginalRate": 0.2965,
  "max": 60000,
  "refund": 10792.964,
  "repayAnnual": 2333.3333333333335,
  "repayYears": 15,
  "ruleDays": 90,
  "schedule": [
    {
      "balance": 32666.666666666668,
      "repay": 2333.3333333333335,
      "year": 1,
    },
    {
      "balance": 30333.333333333336,
      "repay": 2333.3333333333335,
      "year": 2,
    },
    {
      "balance": 28000.000000000004,
      "repay": 2333.3333333333335,
      "year": 3,
    },
    {
      "balance": 25666.66666666667,
      "repay": 2333.3333333333335,
      "year": 4,
    },
    {
      "balance": 23333.33333333334,
      "repay": 2333.3333333333335,
      "year": 5,
    },
    {
      "balance": 21000.000000000007,
      "repay": 2333.3333333333335,
      "year": 6,
    },
    {
      "balance": 18666.666666666675,
      "repay": 2333.3333333333335,
      "year": 7,
    },
    {
      "balance": 16333.333333333341,
      "repay": 2333.3333333333335,
      "year": 8,
    },
    {
      "balance": 14000.000000000007,
      "repay": 2333.3333333333335,
      "year": 9,
    },
    {
      "balance": 11666.666666666673,
      "repay": 2333.3333333333335,
      "year": 10,
    },
    {
      "balance": 9333.33333333334,
      "repay": 2333.3333333333335,
      "year": 11,
    },
    {
      "balance": 7000.0000000000055,
      "repay": 2333.3333333333335,
      "year": 12,
    },
    {
      "balance": 4666.6666666666715,
      "repay": 2333.3333333333335,
      "year": 13,
    },
    {
      "balance": 2333.333333333338,
      "repay": 2333.3333333333335,
      "year": 14,
    },
    {
      "balance": 4.547473508864641e-12,
      "repay": 2333.3333333333335,
      "year": 15,
    },
  ],
  "taxIfMissed": 691.8333333333334,
  "withdraw": 35000,
  "withdrawRequested": 35000,
  "withdrawRoomLeft": 25000,
}
`;

exports[`golden: hbpPlay > winnipeg 1`] = `
{
  "clampedByContribution": false,
  "contribution": 40000,
  "graceYears": 2,
  "marginalRate": 0.3325,
  "max": 60000,
  "refund": 12371.072000000002,
  "repayAnnual": 2333.3333333333335,
  "repayYears": 15,
  "ruleDays": 90,
  "schedule": [
    {
      "balance": 32666.666666666668,
      "repay": 2333.3333333333335,
      "year": 1,
    },
    {
      "balance": 30333.333333333336,
      "repay": 2333.3333333333335,
      "year": 2,
    },
    {
      "balance": 28000.000000000004,
      "repay": 2333.3333333333335,
      "year": 3,
    },
    {
      "balance": 25666.66666666667,
      "repay": 2333.3333333333335,
      "year": 4,
    },
    {
      "balance": 23333.33333333334,
      "repay": 2333.3333333333335,
      "year": 5,
    },
    {
      "balance": 21000.000000000007,
      "repay": 2333.3333333333335,
      "year": 6,
    },
    {
      "balance": 18666.666666666675,
      "repay": 2333.3333333333335,
      "year": 7,
    },
    {
      "balance": 16333.333333333341,
      "repay": 2333.3333333333335,
      "year": 8,
    },
    {
      "balance": 14000.000000000007,
      "repay": 2333.3333333333335,
      "year": 9,
    },
    {
      "balance": 11666.666666666673,
      "repay": 2333.3333333333335,
      "year": 10,
    },
    {
      "balance": 9333.33333333334,
      "repay": 2333.3333333333335,
      "year": 11,
    },
    {
      "balance": 7000.0000000000055,
      "repay": 2333.3333333333335,
      "year": 12,
    },
    {
      "balance": 4666.6666666666715,
      "repay": 2333.3333333333335,
      "year": 13,
    },
    {
      "balance": 2333.333333333338,
      "repay": 2333.3333333333335,
      "year": 14,
    },
    {
      "balance": 4.547473508864641e-12,
      "repay": 2333.3333333333335,
      "year": 15,
    },
  ],
  "taxIfMissed": 775.8333333333334,
  "withdraw": 35000,
  "withdrawRequested": 35000,
  "withdrawRoomLeft": 25000,
}
`;

exports[`golden: rentVsBuy > halifax 1`] = `
{
  "breakEven": null,
  "cc": {
    "cash": 81644.375,
    "creditsAtClosing": 0,
    "fin": {
      "baseLoan": 585000,
      "down": 65000,
      "insured": true,
      "loan": 603135,
      "minDown": 40000,
      "premRate": 0.031,
      "premium": 18135,
    },
    "later": 1400,
    "net": 81644.375,
    "total": 16644.375,
  },
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "pay": 132841.7207904217,
  "payoffYear": null,
  "rate": 3.94,
  "renewalRate": 575,
  "renewedAt": 6,
  "rows": [
    {
      "adv": -62682.475976359,
      "balance": 588611.1612963034,
      "bp": 0,
      "buyW": 49431.338703696616,
      "diff": 26713.798430055613,
      "equity": 48031.338703696616,
      "homeValue": 670150,
      "insurance": 1400,
      "interest": 23312.459726359048,
      "maintenance": 6500,
      "opening": 603135,
      "ownerOutlay": 55273.79843005561,
      "paid": 37836.29843005561,
      "propTax": 7377.500000000001,
      "rate": 0.0394,
      "rentW": 112113.81468005561,
      "renterOutlay": 28560,
      "rp": 26713.798430055613,
      "sellingCost": 33507.5,
      "services": 2160,
      "strata": 0,
      "t": 1,
      "taxTimeCredits": 1400,
      "utilities": 2160,
    },
    {
      "adv": -59325.18037651267,
      "balance": 573509.4467911187,
      "bp": 0,
      "buyW": 84333.37070888115,
      "diff": 26387.500930055616,
      "equity": 82868.97070888116,
      "homeValue": 690924.6499999999,
      "insurance": 1442,
      "interest": 22734.58392487087,
      "maintenance": 6695,
      "opening": 588611.1612963034,
      "ownerOutlay": 55804.300930055615,
      "paid": 37836.29843005561,
      "propTax": 7606.2025,
      "rate": 0.0394,
      "rentW": 143658.55108539382,
      "renterOutlay": 29416.8,
      "rp": 54330.13408789379,
      "sellingCost": 34546.2325,
      "services": 2224.8,
      "strata": 0,
      "t": 2,
      "taxTimeCredits": 1464.4,
      "utilities": 2224.8,
    },
    {
      "adv": -55867.440710424824,
      "balance": 557806.8639100472,
      "bp": 0,
      "buyW": 120451.04693245271,
      "diff": 26051.643207555615,
      "equity": 118919.2845324527,
      "homeValue": 712343.3141499999,
      "insurance": 1485.26,
      "interest": 22133.71554898426,
      "maintenance": 6895.849999999999,
      "opening": 573509.4467911187,
      "ownerOutlay": 56350.94720755561,
      "paid": 37836.29843005561,
      "propTax": 7841.994777499999,
      "rate": 0.0394,
      "rentW": 176318.48764287753,
      "renterOutlay": 30299.303999999996,
      "rp": 82880.96346349252,
      "sellingCost": 35617.1657075,
      "services": 2291.544,
      "strata": 0,
      "t": 3,
      "taxTimeCredits": 1531.7624,
      "utilities": 2291.544,
    },
    {
      "adv": -52307.7063535621,
      "balance": 541479.5052480714,
      "bp": 0,
      "buyW": 157827.37726654593,
      "diff": 25705.945545658105,
      "equity": 156225.15379614593,
      "homeValue": 734425.9568886498,
      "insurance": 1529.8178,
      "interest": 21508.939768079723,
      "maintenance": 7102.7255000000005,
      "opening": 557806.8639100472,
      "ownerOutlay": 56914.228665658105,
      "paid": 37836.29843005561,
      "propTax": 8085.096615602499,
      "rate": 0.0394,
      "rentW": 210135.08362010802,
      "renterOutlay": 31208.28312,
      "rp": 112399.43332847128,
      "sellingCost": 36721.29784443249,
      "services": 2360.29032,
      "strata": 0,
      "t": 4,
      "taxTimeCredits": 1602.2234704000002,
      "utilities": 2360.29032,
    },
    {
      "adv": -48644.500467938895,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 196506.91705443588,
      "diff": 25350.120055741798,
      "equity": 194830.99130439747,
      "homeValue": 757193.1615521978,
      "insurance": 1575.7123340000003,
      "interest": 20859.30535217474,
      "maintenance": 7315.807265000001,
      "opening": 541479.5052480714,
      "ownerOutlay": 57494.6516693418,
      "paid": 37836.29843005561,
      "propTax": 8335.734610686177,
      "rate": 0.0394,
      "rentW": 245151.41752237477,
      "renterOutlay": 32144.531613600004,
      "rp": 142919.92731732276,
      "sellingCost": 37859.65807760989,
      "services": 2431.0990296000004,
      "strata": 0,
      "t": 5,
      "taxTimeCredits": 1675.9257500384003,
      "utilities": 2431.0990296000004,
    },
    {
      "adv": -1618793.2559758816,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 218883.3482466498,
      "diff": 1581248.2214941273,
      "equity": 217130.32991210965,
      "homeValue": 780666.1495603159,
      "insurance": 1622.98370402,
      "interest": 1594100.64948506,
      "maintenance": 7535.28148295,
      "opening": 524502.5121701905,
      "ownerOutlay": 1614357.0890561354,
      "paid": 1594100.64948506,
      "propTax": 8594.142383617445,
      "rate": 5.75,
      "rentW": 1837676.6042225314,
      "renterOutlay": 33108.867562008,
      "rp": 1730742.465468047,
      "sellingCost": 39033.3074780158,
      "services": 2504.032000488,
      "strata": 0,
      "t": 6,
      "taxTimeCredits": 1753.0183345401667,
      "utilities": 2504.032000488,
    },
    {
      "adv": -3261126.3656189605,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 241954.60519458988,
      "diff": 1580871.2427967829,
      "equity": 240120.94801666087,
      "homeValue": 804866.8001966856,
      "insurance": 1671.6732151406002,
      "interest": 1594100.64948506,
      "maintenance": 7761.339927438501,
      "opening": 524502.5121701905,
      "ownerOutlay": 1614973.376385651,
      "paid": 1594100.64948506,
      "propTax": 8860.560797509586,
      "rate": 5.75,
      "rentW": 3503080.9708135505,
      "renterOutlay": 34102.133588868244,
      "rp": 3391227.86167636,
      "sellingCost": 40243.34000983428,
      "services": 2579.1529605026403,
      "strata": 0,
      "t": 7,
      "taxTimeCredits": 1833.6571779290146,
      "utilities": 2579.1529605026403,
    },
    {
      "adv": -4978963.63593734,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 265742.28069056704,
      "diff": 1580483.2211569324,
      "equity": 263824.2752824533,
      "homeValue": 829817.6710027829,
      "insurance": 1721.8234115948183,
      "interest": 1594100.64948506,
      "maintenance": 7994.180125261656,
      "opening": 524502.5121701905,
      "ownerOutlay": 1615608.4187534668,
      "paid": 1594100.64948506,
      "propTax": 9135.238182232382,
      "rate": 5.75,
      "rentW": 5244705.916627906,
      "renterOutlay": 35125.19759653429,
      "rp": 5127707.564470405,
      "sellingCost": 41490.883550139144,
      "services": 2656.5275493177196,
      "strata": 0,
      "t": 8,
      "taxTimeCredits": 1918.0054081137494,
      "utilities": 2656.5275493177196,
    },
    {
      "adv": -6775777.5829876885,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 290268.63935037213,
      "diff": 1580083.8335452706,
      "equity": 288262.40569348517,
      "homeValue": 855542.018803869,
      "insurance": 1773.478113942663,
      "interest": 1594100.64948506,
      "maintenance": 8234.005529019507,
      "opening": 524502.5121701905,
      "ownerOutlay": 1616262.787069701,
      "paid": 1594100.64948506,
      "propTax": 9418.430565881587,
      "rate": 5.75,
      "rentW": 7066046.222338061,
      "renterOutlay": 36178.95352443032,
      "rp": 6943665.945981314,
      "sellingCost": 42777.10094019346,
      "services": 2736.2233757972513,
      "strata": 0,
      "t": 9,
      "taxTimeCredits": 2006.2336568869816,
      "utilities": 2736.2233757972513,
    },
    {
      "adv": -8655200.457510894,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 315556.6385523629,
      "diff": 1579672.747497643,
      "equity": 313458.1181472591,
      "homeValue": 882063.821386789,
      "insurance": 1826.6824573609429,
      "interest": 1594100.64948506,
      "maintenance": 8481.025694890091,
      "opening": 524502.5121701905,
      "ownerOutlay": 1616937.0696278063,
      "paid": 1594100.64948506,
      "propTax": 9710.401913423913,
      "rate": 5.75,
      "rentW": 8970757.096063256,
      "renterOutlay": 37264.32213016324,
      "rp": 8842747.326994099,
      "sellingCost": 44103.19106933945,
      "services": 2818.310077071169,
      "strata": 0,
      "t": 10,
      "taxTimeCredits": 2098.520405103783,
      "utilities": 2818.310077071169,
    },
  ],
  "upFront": 81644.375,
  "years": 10,
}
`;

exports[`golden: rentVsBuy > toronto 1`] = `
{
  "breakEven": null,
  "cc": {
    "cash": 92023.188125,
    "creditsAtClosing": 8475,
    "fin": {
      "baseLoan": 585000,
      "down": 65000,
      "insured": true,
      "loan": 603135,
      "minDown": 40000,
      "premRate": 0.031,
      "premium": 18135,
    },
    "later": 1400,
    "net": 83548.188125,
    "total": 27023.188125,
  },
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "pay": 132841.7207904217,
  "payoffYear": null,
  "rate": 3.94,
  "renewalRate": 575,
  "renewedAt": 6,
  "rows": [
    {
      "adv": -60585.91700510899,
      "balance": 588611.1612963034,
      "bp": 0,
      "buyW": 49431.338703696616,
      "diff": 22625.85093005561,
      "equity": 48031.338703696616,
      "homeValue": 670150,
      "insurance": 1400,
      "interest": 23312.459726359048,
      "maintenance": 6500,
      "opening": 603135,
      "ownerOutlay": 51185.85093005561,
      "paid": 37836.29843005561,
      "propTax": 3289.5525000000002,
      "rate": 0.0394,
      "rentW": 110017.2557088056,
      "renterOutlay": 28560,
      "rp": 22625.85093005561,
      "sellingCost": 33507.5,
      "services": 2160,
      "strata": 0,
      "t": 1,
      "taxTimeCredits": 1400,
      "utilities": 2160,
    },
    {
      "adv": -52917.50582008515,
      "balance": 573509.4467911187,
      "bp": 0,
      "buyW": 84333.37070888115,
      "diff": 22172.82705755562,
      "equity": 82868.97070888116,
      "homeValue": 690924.6499999999,
      "insurance": 1442,
      "interest": 22734.58392487087,
      "maintenance": 6695,
      "opening": 588611.1612963034,
      "ownerOutlay": 51589.62705755562,
      "paid": 37836.29843005561,
      "propTax": 3391.5286275000003,
      "rate": 0.0394,
      "rentW": 137250.8765289663,
      "renterOutlay": 29416.8,
      "rp": 45839.467130393794,
      "sellingCost": 34546.2325,
      "services": 2224.8,
      "strata": 0,
      "t": 2,
      "taxTimeCredits": 1464.4,
      "utilities": 2224.8,
    },
    {
      "adv": -44819.68436185416,
      "balance": 557806.8639100472,
      "bp": 0,
      "buyW": 120451.04693245271,
      "diff": 21706.314445008116,
      "equity": 118919.2845324527,
      "homeValue": 712343.3141499999,
      "insurance": 1485.26,
      "interest": 22133.71554898426,
      "maintenance": 6895.849999999999,
      "opening": 573509.4467911187,
      "ownerOutlay": 52005.61844500811,
      "paid": 37836.29843005561,
      "propTax": 3496.6660149524996,
      "rate": 0.0394,
      "rentW": 165270.73129430687,
      "renterOutlay": 30299.303999999996,
      "rp": 69654.39706340003,
      "sellingCost": 35617.1657075,
      "services": 2291.544,
      "strata": 0,
      "t": 3,
      "taxTimeCredits": 1531.7624,
      "utilities": 2291.544,
    },
    {
      "adv": -36271.719258770725,
      "balance": 541479.5052480714,
      "bp": 0,
      "buyW": 157827.37726654593,
      "diff": 21225.91159147164,
      "equity": 156225.15379614593,
      "homeValue": 734425.9568886498,
      "insurance": 1529.8178,
      "interest": 21508.939768079723,
      "maintenance": 7102.7255000000005,
      "opening": 557806.8639100472,
      "ownerOutlay": 52434.19471147164,
      "paid": 37836.29843005561,
      "propTax": 3605.0626614160274,
      "rate": 0.0394,
      "rentW": 194099.09652531665,
      "renterOutlay": 31208.28312,
      "rp": 94084.41091978808,
      "sellingCost": 36721.29784443249,
      "services": 2360.29032,
      "strata": 0,
      "t": 4,
      "taxTimeCredits": 1602.2234704000002,
      "utilities": 2360.29032,
    },
    {
      "adv": -27251.942960020882,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 196506.91705443588,
      "diff": 20731.205048975542,
      "equity": 194830.99130439747,
      "homeValue": 757193.1615521978,
      "insurance": 1575.7123340000003,
      "interest": 20859.30535217474,
      "maintenance": 7315.807265000001,
      "opening": 541479.5052480714,
      "ownerOutlay": 52875.736662575546,
      "paid": 37836.29843005561,
      "propTax": 3716.819603919924,
      "rate": 0.0394,
      "rentW": 223758.86001445676,
      "renterOutlay": 32144.531613600004,
      "rp": 119143.49887107388,
      "sellingCost": 37859.65807760989,
      "services": 2431.0990296000004,
      "strata": 0,
      "t": 5,
      "taxTimeCredits": 1675.9257500384003,
      "utilities": 2431.0990296000004,
    },
    {
      "adv": -1591654.5394506233,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 218883.3482466498,
      "diff": 1576486.1201221514,
      "equity": 217130.32991210965,
      "homeValue": 780666.1495603159,
      "insurance": 1622.98370402,
      "interest": 1594100.64948506,
      "maintenance": 7535.28148295,
      "opening": 524502.5121701905,
      "ownerOutlay": 1609594.9876841595,
      "paid": 1594100.64948506,
      "propTax": 3832.0410116414405,
      "rate": 5.75,
      "rentW": 1810537.8876972732,
      "renterOutlay": 33108.867562008,
      "rp": 1701110.2199412948,
      "sellingCost": 39033.3074780158,
      "services": 2504.032000488,
      "strata": 0,
      "t": 6,
      "taxTimeCredits": 1753.0183345401667,
      "utilities": 2504.032000488,
    },
    {
      "adv": -3227829.541619034,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 241954.60519458988,
      "diff": 1575961.5162822758,
      "equity": 240120.94801666087,
      "homeValue": 804866.8001966856,
      "insurance": 1671.6732151406002,
      "interest": 1594100.64948506,
      "maintenance": 7761.339927438501,
      "opening": 524502.5121701905,
      "ownerOutlay": 1610063.649871144,
      "paid": 1594100.64948506,
      "propTax": 3950.834283002325,
      "rate": 5.75,
      "rentW": 3469784.146813624,
      "renterOutlay": 34102.133588868244,
      "rp": 3355322.8063408704,
      "sellingCost": 40243.34000983428,
      "services": 2579.1529605026403,
      "strata": 0,
      "t": 7,
      "taxTimeCredits": 1833.6571779290146,
      "utilities": 2579.1529605026403,
    },
    {
      "adv": -4939073.22999696,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 265742.28069056704,
      "diff": 1575421.2931204753,
      "equity": 263824.2752824533,
      "homeValue": 829817.6710027829,
      "insurance": 1721.8234115948183,
      "interest": 1594100.64948506,
      "maintenance": 7994.180125261656,
      "opening": 524502.5121701905,
      "ownerOutlay": 1610546.4907170096,
      "paid": 1594100.64948506,
      "propTax": 4073.3101457753964,
      "rate": 5.75,
      "rentW": 5204815.510687526,
      "renterOutlay": 35125.19759653429,
      "rp": 5085088.948553026,
      "sellingCost": 41490.883550139144,
      "services": 2656.5275493177196,
      "strata": 0,
      "t": 8,
      "taxTimeCredits": 1918.0054081137494,
      "utilities": 2656.5275493177196,
    },
    {
      "adv": -6728833.370568464,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 290268.63935037213,
      "diff": 1574864.9857396835,
      "equity": 288262.40569348517,
      "homeValue": 855542.018803869,
      "insurance": 1773.478113942663,
      "interest": 1594100.64948506,
      "maintenance": 8234.005529019507,
      "opening": 524502.5121701905,
      "ownerOutlay": 1611043.9392641138,
      "paid": 1594100.64948506,
      "propTax": 4199.582760294434,
      "rate": 5.75,
      "rentW": 7019102.009918836,
      "renterOutlay": 36178.95352443032,
      "rp": 6893868.0259261485,
      "sellingCost": 42777.10094019346,
      "services": 2736.2233757972513,
      "strata": 0,
      "t": 9,
      "taxTimeCredits": 2006.2336568869816,
      "utilities": 2736.2233757972513,
    },
    {
      "adv": -8600716.179232825,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 315556.6385523629,
      "diff": 1574292.1154100827,
      "equity": 313458.1181472591,
      "homeValue": 882063.821386789,
      "insurance": 1826.6824573609429,
      "interest": 1594100.64948506,
      "maintenance": 8481.025694890091,
      "opening": 524502.5121701905,
      "ownerOutlay": 1611556.437540246,
      "paid": 1594100.64948506,
      "propTax": 4329.769825863561,
      "rate": 5.75,
      "rentW": 8916272.817785187,
      "renterOutlay": 37264.32213016324,
      "rp": 8785278.070528835,
      "sellingCost": 44103.19106933945,
      "services": 2818.310077071169,
      "strata": 0,
      "t": 10,
      "taxTimeCredits": 2098.520405103783,
      "utilities": 2818.310077071169,
    },
  ],
  "upFront": 83548.188125,
  "years": 10,
}
`;

exports[`golden: rentVsBuy > winnipeg 1`] = `
{
  "breakEven": null,
  "cc": {
    "cash": 85721.38875,
    "creditsAtClosing": 0,
    "fin": {
      "baseLoan": 585000,
      "down": 65000,
      "insured": true,
      "loan": 603135,
      "minDown": 40000,
      "premRate": 0.031,
      "premium": 18135,
    },
    "later": 1400,
    "net": 85721.38875,
    "total": 20721.38875,
  },
  "fin": {
    "baseLoan": 585000,
    "down": 65000,
    "insured": true,
    "loan": 603135,
    "minDown": 40000,
    "premRate": 0.031,
    "premium": 18135,
  },
  "pay": 132841.7207904217,
  "payoffYear": null,
  "rate": 3.94,
  "renewalRate": 575,
  "renewedAt": 6,
  "rows": [
    {
      "adv": -68159.08735885899,
      "balance": 588611.1612963034,
      "bp": 0,
      "buyW": 49431.338703696616,
      "diff": 27925.853430055613,
      "equity": 48031.338703696616,
      "homeValue": 670150,
      "insurance": 1400,
      "interest": 23312.459726359048,
      "maintenance": 6500,
      "opening": 603135,
      "ownerOutlay": 56485.85343005561,
      "paid": 37836.29843005561,
      "propTax": 8589.555,
      "rate": 0.0394,
      "rentW": 117590.4260625556,
      "renterOutlay": 28560,
      "rp": 27925.853430055613,
      "sellingCost": 33507.5,
      "services": 2160,
      "strata": 0,
      "t": 1,
      "taxTimeCredits": 1400,
      "utilities": 2160,
    },
    {
      "adv": -66303.34458760763,
      "balance": 573509.4467911187,
      "bp": 0,
      "buyW": 84333.37070888115,
      "diff": 27637.12963505562,
      "equity": 82868.97070888116,
      "homeValue": 690924.6499999999,
      "insurance": 1442,
      "interest": 22734.58392487087,
      "maintenance": 6695,
      "opening": 588611.1612963034,
      "ownerOutlay": 57053.92963505562,
      "paid": 37836.29843005561,
      "propTax": 8855.831205,
      "rate": 0.0394,
      "rentW": 150636.71529648878,
      "renterOutlay": 29416.8,
      "rp": 56847.572322893786,
      "sellingCost": 34546.2325,
      "services": 2224.8,
      "strata": 0,
      "t": 2,
      "taxTimeCredits": 1464.4,
      "utilities": 2224.8,
    },
    {
      "adv": -64454.9676700852,
      "balance": 557806.8639100472,
      "bp": 0,
      "buyW": 120451.04693245271,
      "diff": 27340.01040241062,
      "equity": 118919.2845324527,
      "homeValue": 712343.3141499999,
      "insurance": 1485.26,
      "interest": 22133.71554898426,
      "maintenance": 6895.849999999999,
      "opening": 573509.4467911187,
      "ownerOutlay": 57639.314402410615,
      "paid": 37836.29843005561,
      "propTax": 9130.361972354998,
      "rate": 0.0394,
      "rentW": 184906.0146025379,
      "renterOutlay": 30299.303999999996,
      "rp": 86802.57105215752,
      "sellingCost": 35617.1657075,
      "services": 2291.544,
      "strata": 0,
      "t": 3,
      "taxTimeCredits": 1531.7624,
      "utilities": 2291.544,
    },
    {
      "adv": -62618.56613126234,
      "balance": 541479.5052480714,
      "bp": 0,
      "buyW": 157827.37726654593,
      "diff": 27034.25212355361,
      "equity": 156225.15379614593,
      "homeValue": 734425.9568886498,
      "insurance": 1529.8178,
      "interest": 21508.939768079723,
      "maintenance": 7102.7255000000005,
      "opening": 557806.8639100472,
      "ownerOutlay": 58242.53524355361,
      "paid": 37836.29843005561,
      "propTax": 9413.403193498003,
      "rate": 0.0394,
      "rentW": 220445.94339780827,
      "renterOutlay": 31208.28312,
      "rp": 117829.74144411039,
      "sellingCost": 36721.29784443249,
      "services": 2360.29032,
      "strata": 0,
      "t": 4,
      "taxTimeCredits": 1602.2234704000002,
      "utilities": 2360.29032,
    },
    {
      "adv": -60799.14387722366,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 196506.91705443588,
      "diff": 26719.604137552058,
      "equity": 194830.99130439747,
      "homeValue": 757193.1615521978,
      "insurance": 1575.7123340000003,
      "interest": 20859.30535217474,
      "maintenance": 7315.807265000001,
      "opening": 541479.5052480714,
      "ownerOutlay": 58864.13575115206,
      "paid": 37836.29843005561,
      "propTax": 9705.21869249644,
      "rate": 0.0394,
      "rentW": 257306.06093165954,
      "renterOutlay": 32144.531613600004,
      "rp": 149969.51368809154,
      "sellingCost": 37859.65807760989,
      "services": 2431.0990296000004,
      "strata": 0,
      "t": 5,
      "taxTimeCredits": 1675.9257500384003,
      "utilities": 2431.0990296000004,
    },
    {
      "adv": -1632918.95107034,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 218883.3482466498,
      "diff": 1582660.1595824738,
      "equity": 217130.32991210965,
      "homeValue": 780666.1495603159,
      "insurance": 1622.98370402,
      "interest": 1594100.64948506,
      "maintenance": 7535.28148295,
      "opening": 524502.5121701905,
      "ownerOutlay": 1615769.027144482,
      "paid": 1594100.64948506,
      "propTax": 10006.080471963827,
      "rate": 5.75,
      "rentW": 1851802.2993169897,
      "renterOutlay": 33108.867562008,
      "rp": 1739528.2709002176,
      "sellingCost": 39033.3074780158,
      "services": 2504.032000488,
      "strata": 0,
      "t": 6,
      "taxTimeCredits": 1753.0183345401667,
      "utilities": 2504.032000488,
    },
    {
      "adv": -3277357.550856849,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 241954.60519458988,
      "diff": 1582326.950965868,
      "equity": 240120.94801666087,
      "homeValue": 804866.8001966856,
      "insurance": 1671.6732151406002,
      "interest": 1594100.64948506,
      "maintenance": 7761.339927438501,
      "opening": 524502.5121701905,
      "ownerOutlay": 1616429.0845547363,
      "paid": 1594100.64948506,
      "propTax": 10316.268966594705,
      "rate": 5.75,
      "rentW": 3519312.1560514392,
      "renterOutlay": 34102.133588868244,
      "rp": 3401873.5223274957,
      "sellingCost": 40243.34000983428,
      "services": 2579.1529605026403,
      "strata": 0,
      "t": 7,
      "taxTimeCredits": 1833.6571779290146,
      "utilities": 2579.1529605026403,
    },
    {
      "adv": -4997442.2908184985,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 265742.28069056704,
      "diff": 1581984.056279259,
      "equity": 263824.2752824533,
      "homeValue": 829817.6710027829,
      "insurance": 1721.8234115948183,
      "interest": 1594100.64948506,
      "maintenance": 7994.180125261656,
      "opening": 524502.5121701905,
      "ownerOutlay": 1617109.2538757934,
      "paid": 1594100.64948506,
      "propTax": 10636.07330455914,
      "rate": 5.75,
      "rentW": 5263184.571509065,
      "renterOutlay": 35125.19759653429,
      "rp": 5140343.76063382,
      "sellingCost": 41490.883550139144,
      "services": 2656.5275493177196,
      "strata": 0,
      "t": 8,
      "taxTimeCredits": 1918.0054081137494,
      "utilities": 2656.5275493177196,
    },
    {
      "adv": -6796653.617004499,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 290268.63935037213,
      "diff": 1581631.1945563895,
      "equity": 288262.40569348517,
      "homeValue": 855542.018803869,
      "insurance": 1773.478113942663,
      "interest": 1594100.64948506,
      "maintenance": 8234.005529019507,
      "opening": 524502.5121701905,
      "ownerOutlay": 1617810.1480808198,
      "paid": 1594100.64948506,
      "propTax": 10965.791577000475,
      "rate": 5.75,
      "rentW": 7086922.256354871,
      "renterOutlay": 36178.95352443032,
      "rp": 6958430.7681793645,
      "sellingCost": 42777.10094019346,
      "services": 2736.2233757972513,
      "strata": 0,
      "t": 9,
      "taxTimeCredits": 2006.2336568869816,
      "utilities": 2736.2233757972513,
    },
    {
      "adv": -8678632.11829494,
      "balance": 524502.5121701905,
      "bp": 0,
      "buyW": 315556.6385523629,
      "diff": 1581268.0767001065,
      "equity": 313458.1181472591,
      "homeValue": 882063.821386789,
      "insurance": 1826.6824573609429,
      "interest": 1594100.64948506,
      "maintenance": 8481.025694890091,
      "opening": 524502.5121701905,
      "ownerOutlay": 1618532.3988302697,
      "paid": 1594100.64948506,
      "propTax": 11305.731115887487,
      "rate": 5.75,
      "rentW": 8994188.756847301,
      "renterOutlay": 37264.32213016324,
      "rp": 8859786.660215722,
      "sellingCost": 44103.19106933945,
      "services": 2818.310077071169,
      "strata": 0,
      "t": 10,
      "taxTimeCredits": 2098.520405103783,
      "utilities": 2818.310077071169,
    },
  ],
  "upFront": 85721.38875,
  "years": 10,
}
`;

exports[`golden: scenario > halifax 1`] = `
{
  "baseLoan": 585000,
  "belowMinimum": false,
  "cash": 81644.375,
  "closingTotal": 16644.375,
  "contractRate": 3.94,
  "costOfBorrowing": 360907.4607513902,
  "creditsAtClosing": 0,
  "down": 65000,
  "dpPct": 10,
  "dpPctEff": 10,
  "fundable": false,
  "gds": 42.48189106319505,
  "insured": true,
  "ltv": 0.9,
  "monthly": {
    "condoFee": 0,
    "insurance": 116.66666666666667,
    "maintenance": 541.6666666666666,
    "pi": 3153.024869171301,
    "propTax": 614.7916666666667,
    "total": 4606.1498691713,
    "utilities": 180,
  },
  "months": 46,
  "net": 81644.375,
  "premRate": 0.031,
  "premium": 18135,
  "premiumTaxLine": 0,
  "qualRate": 5.9399999999999995,
  "qualifies": false,
  "stressPay": 3837.413198512797,
  "surplus": -36644.375,
  "tds": 45.71266029396428,
  "totalInterest": 342772.4607513902,
  "totalMortgage": 603135,
  "vsCeiling": 1406.1498691713005,
}
`;

exports[`golden: scenario > toronto 1`] = `
{
  "baseLoan": 585000,
  "belowMinimum": false,
  "cash": 92023.188125,
  "closingTotal": 27023.188125,
  "contractRate": 3.94,
  "costOfBorrowing": 360907.4607513902,
  "creditsAtClosing": 8475,
  "down": 65000,
  "dpPct": 10,
  "dpPctEff": 10,
  "fundable": false,
  "gds": 39.337316063195054,
  "insured": true,
  "ltv": 0.9,
  "monthly": {
    "condoFee": 0,
    "insurance": 116.66666666666667,
    "maintenance": 541.6666666666666,
    "pi": 3153.024869171301,
    "propTax": 274.12937500000004,
    "total": 4265.487577504634,
    "utilities": 180,
  },
  "months": 49,
  "net": 83548.188125,
  "premRate": 0.031,
  "premium": 18135,
  "premiumTaxLine": 1450.8,
  "qualRate": 5.9399999999999995,
  "qualifies": false,
  "stressPay": 3837.413198512797,
  "surplus": -38548.188125,
  "tds": 42.56808529396429,
  "totalInterest": 342772.4607513902,
  "totalMortgage": 603135,
  "vsCeiling": 1065.487577504634,
}
`;

exports[`golden: scenario > winnipeg 1`] = `
{
  "baseLoan": 585000,
  "belowMinimum": false,
  "cash": 85721.38875,
  "closingTotal": 20721.38875,
  "contractRate": 3.94,
  "costOfBorrowing": 360907.4607513902,
  "creditsAtClosing": 0,
  "down": 65000,
  "dpPct": 10,
  "dpPctEff": 10,
  "fundable": false,
  "gds": 43.41424106319505,
  "insured": true,
  "ltv": 0.9,
  "monthly": {
    "condoFee": 0,
    "insurance": 116.66666666666667,
    "maintenance": 541.6666666666666,
    "pi": 3153.024869171301,
    "propTax": 715.79625,
    "total": 4707.154452504635,
    "utilities": 180,
  },
  "months": 51,
  "net": 85721.38875,
  "premRate": 0.031,
  "premium": 18135,
  "premiumTaxLine": 0,
  "qualRate": 5.9399999999999995,
  "qualifies": false,
  "stressPay": 3837.413198512797,
  "surplus": -40721.38875,
  "tds": 46.64501029396428,
  "totalInterest": 342772.4607513902,
  "totalMortgage": 603135,
  "vsCeiling": 1507.1544525046347,
}
`;
